src/App.css
@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap');

:root {
  --primary-color: #ca1f7b;
  --secondary-color: #fff5fd;
}

* {
  margin: 0;
}

.App {
  text-align: center;
  font-family: 'Ubuntu', sans-serif;
}

nav {
  background-color: var(--primary-color);
  color: white;
  padding: 1rem;
}

.search-section {
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.search-image {
  height: 60px;
  display: block;
  text-align: center;
  margin: auto;
}

.search-input {
  margin-top: 1rem;
  padding: 0.5rem 1rem;
  width: 40vw;
}

.search-result {
  margin-top: 2rem;
  margin-bottom: 2rem;
}
.emoji-options {
  display: block;
  margin: auto;
  width: 35vw;
  background-color: var(--secondary-color);
  border-radius: 1rem;
}

.emoji-option {
  font-size: 3rem;
  cursor: pointer;
}

/* .search-input:focus {
  border: 2px solid var(--primary-color);
  outline: 2px solid var(--primary-color);
} */

@media only screen and (max-width: 450px) {
  .search-input {
    font-size: 10px;
  }
  .emoji-options {
    width: 80vw;
  }
  .emoji-option {
    font-size: 2rem;
    cursor: pointer;
  }
}

